# opensearch-sandbox

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
notebooks/: 01_producer.ipynb
src/: config.py  consumer.py  consumer_batch.py  decorators.py  insert.py  producer.py
src/generators/: __init__.py
src/open_search/: async_sql.py  insert_async.py  insert_bulk_client.py  insert_flattened_bulk.py  search.py  sql.py
src/producer/: bet_generator.py  main.py
src/shared/: io.py
