[tool.poetry]
name = "opensearch-sandbox"
version = "0.1.0"
description = "Sandbox for learning opensearch"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "opensearch_sandbox"}]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^17.0.0"
pandas = "^1.5.3"
pydantic = "^1.10.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.0"
pylint = "^2.16.2"
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-functions = "^0.0.7"
flake8-import-order = "^0.18.2"
jupyter = "^1.0.0"
jupyter-contrib-core = "^0.4.2"
jupyter-contrib-nbextensions = "^0.7.0"
jupyterthemes = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
